# Operix

./: .gitignore  CDC-Operix-DotNet.md  CDC-Operix-NodeJS.md  CDC-Operix-Python.md  CLAUDE.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release-dotnet.yml  release-jvm-bridge.yml  release-nodejs.yml  release-python.yml  release.yml
dotnet/: OculiX.sln  README.md
dotnet/src/OculiX/: Bridge.cs  OculiX.csproj  Wrappers.cs
dotnet/tests/OculiX.Tests/: BridgeTests.cs  OculiX.Tests.csproj
jvm-bridge/: pom.xml
jvm-bridge/src/main/java/org/operix/rpc/: Dispatcher.java  ObjectRegistry.java  Server.java
jvm-bridge/src/test/java/org/operix/rpc/: DispatcherTest.java
nodejs/: README.md  package-lock.json  package.json  tsconfig.json
nodejs/src/: bridge.ts  index.ts
nodejs/tests/: bridge.test.ts
proposals/: CDC-pytest-translate-v2.md
python/: README.md  pyproject.toml
python/src/oculix/: __init__.py  _bridge.py
python/tests/: test_bridge.py
