[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oculix"
version = "0.1.0"
description = "Visual automation for the real world — Python wrapper for OculiX"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Julien Mer", email = "julien.mer38@gmail.com"}]
keywords = ["visual-testing", "automation", "ocr", "sikuli", "gui-testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/oculix-org/Operix"
Repository = "https://github.com/oculix-org/Operix"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
